// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RaceListItem should hides error by default 1`] = `
<div
  className={undefined}
>
  <input
    className={undefined}
    id="example-optional"
    name="firstname"
    onChange={[Function]}
    placeholder={undefined}
    type="text"
    value={undefined}
  />
</div>
`;

exports[`RaceListItem should shows error when error is set 1`] = `
<div
  className={undefined}
>
  <input
    className={undefined}
    id="example-optional"
    name="firstname"
    onChange={[Function]}
    placeholder={undefined}
    type="text"
    value={undefined}
  />
  <div
    className={undefined}
  >
    First name is required.
  </div>
</div>
`;
